Added controller and swagger docs
